# soonscan

./: .env  .gitignore  Cargo.toml  README.md  code4sscan.txt  diesel.toml
src/: main.rs
src/api/: blocks.rs  mod.rs
src/backend/: bun.lockb  package.json  server.js
src/backend/routes/: explorer.js
src/backend/services/: validator.js
src/backend/src/: explorer.js  networkConfig.js  server.js  validator.js
src/blockchain/: Cargo.toml  cargo.toml
src/blockchain/src/: libs.rs
src/db/: mod.rs
src/frontend/: package-lock.json
src/frontend/src/: App.js  App.vue
src/frontend/src/api/: explorer.js  index.js
src/frontend/src/components/: BlockExplorer.vue  Explorer.js  TransactionExplorer.vue  ValidateTransaction.vue
src/frontend/src/router/: index.js
src/frontend/src/views/: Home.vue  Transaction.vue
src/models/: addresses.rs  contracts.rs  tokens.rs  transaction.rs
src/services/: blockchain.rs  indexing.rs
