[package]
name = "soonscan"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5"  # Web framework for API
serde = { version = "1.0", features = ["derive"] }  # Data serialization
serde_json = "1.0"  # JSON handling
tokio = { version = "1", features = ["full"] }  # Asynchronous runtime
reqwest = "0.11"  # For HTTP requests (to fetch data from RPC endpoints)
postgres = "0.19"  # PostgreSQL database connector
diesel = { version = "2.0.3", features = ["postgres", "r2d2"] }  # ORM for PostgreSQL
tantivy = "0.17"  # Fast full-text search library
solana-client = "1.14"  # Solana RPC client library
