[package]
name = "soonscan"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
solana-sdk = "1.17"
solana-client = "1.17"
solana-program = "1.17"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"